--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,12 @@
     <meta name="theme-color" content="#17BEBB">
     <link rel="manifest" href="/manifest.json">
     <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
-    <title>SUTD SOAR</title>
+    <title>SUTD Organisation of Autonomous Robotics</title>
 </head>
+
 <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
+
 </html>
